# AlmondEngine

./: .gitattributes  .gitignore  AlmondEngine.sln  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
AlmondEngine/: AlmondEngine.vcxitems  AlmondEngine.vcxitems.filters  CMakeLists.txt  CMakePresets.json  Engine.vcxitems  Engine.vcxitems.filters  build.sh  clean.sh  install.sh  run.sh  vcpkg.json
AlmondEngine/docs/: debian linux build setup instructions_with vcpkg incase vulkan ever makes it work.md  file_structure.txt  filelist.txt  tools_list.txt
AlmondEngine/examples/: CMakeLists.txt  clean.bat
AlmondEngine/examples/ConsoleApplication1/: ConsoleApplication1.vcxproj  main.cpp
AlmondEngine/examples/ConsoleApplication1/assets/defaults/: almond.ppm  default.ppm
AlmondEngine/examples/ConsoleApplication1/assets/frog/: frog.ppm
AlmondEngine/examples/ConsoleApplication1/assets/match3/: gem0.ppm  gem1.ppm  gem5.ppm
AlmondEngine/examples/ConsoleApplication1/assets/menu/: 2048buttonNormal.ppm  2048buttonhover.ppm  cellularbuttonhover.ppm  cellularbuttonnormal.ppm  match3buttonhover.ppm  match3buttonnormal.ppm  menubuttons.tga  minesweeperbuttonhover.ppm  minesweeperbuttonnormal.ppm  pacmanbuttonhover.ppm  pacmanbuttonnormal.ppm  quitbuttonhover.ppm  quitbuttonnormal.ppm  sandbuttonhover.ppm  sandbuttonnormal.ppm  settingsbuttonhover.ppm  settingsbuttonnormal.ppm  slidingpuzzlebuttonhover.ppm  slidingpuzzlebuttonnormal.ppm  snakebuttonNormal.ppm  snakebuttonhover.ppm  sokobanbuttonhover.ppm  sokobanbuttonnormal.ppm  tetrisbuttonhover.ppm  tetrisbuttonnormal.ppm
AlmondEngine/examples/ConsoleApplication1/assets/minesweeperlike/: 0.ppm  1.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  covered.ppm  mine.ppm
AlmondEngine/examples/ConsoleApplication1/assets/not used/: exit_button.ppm  (+3 more)
AlmondEngine/examples/ConsoleApplication1/atlas_dump/: menubuttons_0_89.ppm  menubuttons_0_94.ppm  tetrisatlas_1_2.ppm
AlmondEngine/examples/ConsoleApplication1/atlases/: cell_atlas_1_2.ppm  match3_atlas_1_2.ppm  minesweeper_atlas_1_2.ppm  pacman_atlas_1_2.ppm  sliding_atlas_2_3.ppm  snakeatlas_1_2.ppm  sokoban_atlas_1_2.ppm
AlmondEngine/examples/Example_Android_StaticLibrary1/: CMakeLists.txt  Example_Android_StaticLibrary1.cpp  Example_Android_StaticLibrary1.vcxproj
AlmondEngine/examples/Example_CMake_Project1/: CMakeLists.txt
AlmondEngine/examples/Example_CMake_Project1/src/: main.cpp
AlmondEngine/examples/Example_ConsoleApplication/: Example_ConsoleApplication.vcxproj  Example_ConsoleApplication.vcxproj.filters  main.cpp
AlmondEngine/examples/Example_ConsoleApplication/src/: Example_ConsoleApplication.cpp
AlmondEngine/examples/Example_Dll1/: Example_Dll1.vcxproj  Example_Dll1.vcxproj.filters
AlmondEngine/examples/Example_Mod_Dll1/: Example_Mod_Dll1.vcxproj
AlmondEngine/examples/Example_Mod_Dll1/src/: Example_Mod_DLL1.cpp  Example_Mod_DLL1.h  dllmain.cpp
AlmondEngine/examples/Example_StaticLib1/: Example_StaticLib1.vcxproj
AlmondEngine/examples/Example_StaticLib1/src/: Example_StaticLib1.cpp
AlmondEngine/examples/Example_WindowsProject1/: Example_WindowsProject1.vcxproj  Example_WindowsProject1.vcxproj.filters
AlmondEngine/examples/Example_WindowsProject1/src/: Example_WindowsProject1.aps
AlmondEngine/examples/StaticLib1/: StaticLib1.cpp  StaticLib1.vcxproj
AlmondEngine/include/: a2048like.hpp  aallocator.hpp  aapplicationmodule.hpp  aatlasmanager.hpp  aatlastexture.hpp  aatomicfunction.hpp  abuildsystem.hpp  acellularsim.hpp  acodeinspector.hpp  acommandline.hpp  acommandqueue.hpp  acompiler.hpp  acontext.hpp  acontextmultiplexer.hpp  acontextrenderer.hpp  acontextstate.hpp  acontextstatemanager.hpp  acontexttype.hpp  acontextwindow.hpp  aecs.hpp  aeditor.hpp  aenduserapplication.hpp  aengine.hpp  aenginebindings.hpp  aengineconfig.hpp  aenginehandles.hpp  aenginesystems.hpp  aentity.hpp  aentitycomponentmanager.hpp  aentitycomponents.hpp  aentityhistory.hpp  aeventsystem.hpp  afilewatch.hpp  afontrenderer.hpp  aframework.hpp  afroggerlike.hpp  agamecore.hpp  aguimenu.hpp  aimageatlaswriter.hpp  aimageloader.hpp  (+75 more)
AlmondEngine/shaders/: frag.glsl  vert.glsl
AlmondEngine/src/: AlmondEngine.cpp  AlmondEngine.h  AsyncPluginManager.h  ComponentManager.h  Components.h  Entity.h  EntityComponentSystem.h  EntryPoint.cpp  EntryPoint.h  EntryPoint_Android.h  EntryPoint_Crossplatform.cpp  EntryPoint_Crossplatform.h  EntryPoint_Headless.cpp  EntryPoint_Headless.h  EntryPoint_Wasm.cpp  EntryPoint_Wasm.h  EntryPoint_Win32.cpp  EntryPoint_Win32.h  EntryPoint_X11.cpp  EntryPoint_X11.h  Event.h  EventManager.h  Exports_DLL.cpp  Exports_DLL.h  LoadSave.cpp  LoadSave.h  Logger.h  ModManager.cpp  ModManager.h  MovementEvent.h  PhysicsSystem2D.h  PluginConcept.h  PluginManager.h  RenderingSystem.h  Scene.h  SceneSnapshot.h  ThreadPool.h  TimeKeeper.h  Types.h  Types_Posix.h  (+82 more)
AlmondEngine/src/glad/: glad.c  glad.h
AlmondEngine/src/scripts/: editor_launcher.ascript.cpp  editor_launcher.exp
AlmondEngine/src/stb/: stb_truetype.h
(+30 files in other folders)
